# Job-App

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  LICENSE  MANUAL.md  README.md  TODO.md  docker-compose.yml  setup.sh  update.sh  update_dev.sh
.github/workflows/: release.yml
config/: config_v2.json  import_prompt.txt  onboarding_prompt.txt  system_prompt.txt
frontend/: README.md  index.html  map.html  onboarding.html  tracker.html
frontend/css/: base.css  variables.css
frontend/css/components/: action-bar.css  console.css  detail-panel.css  header.css  map.css  modal.css  sidebar.css  tracker.css
frontend/css/features/: fit-verdict.css
frontend/css/layouts/: main.css
frontend/data/: ch-geo.json
frontend/js/: README.md  api.js  application-status.js  geocode.js  main.js  map.js  tracker.js
frontend/js/components/: actions.js  column-resize.js  console.js  detail.js  header.js  job-list.js  map.js  modal.js
frontend/js/utils/: confirm.js  location.js
include/: ai.h  app_state.h  config.h  db.h  fitcheck.h  html.h  http.h  response.h  routes.h  scheduler.h  scraper.h
scripts/: build-geo-json.mjs  build-win.sh
src/: ai.cpp  config.cpp  db.cpp  fitcheck.cpp  html.cpp  http.cpp  main.cpp  response.cpp  routes.cpp  scheduler.cpp  scraper.cpp  win_compat.c
